--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,3 +1,6 @@
-.contactList {
-    padding: 0;
+.contactListContainer {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  column-gap: 10px;
 }
