--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -4,8 +4,7 @@
 }
 .navLink {
     text-decoration: none;
-    color: #213547;
-    transform: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin-left: 20px;
 }
 .active {
     color: #262626;
