--- a/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/src/components/RegistrationForm/RegistrationForm.module.css
@@ -6,13 +6,13 @@
     gap: 20px;
     width: 350px;
     padding: 15px;
-    margin-top: 10px;
-    margin-bottom: 25px;
-    border: solid 1.5px #0a0a0a;
+    border: solid 1.5px #bbbbbb;
     border-radius: 8px;
     margin: 0 auto;
     margin-top: 34px;
+    background-color: #efefef;
 }
+
 .formLabel input {
     border: solid 1.5px #0a0a0a;
     border-radius: 6px;
@@ -23,36 +23,129 @@
     padding: 10px;
     margin-top: 4px
 }
-.formLabel input:focus {
-    outline: none;
-    background: #0a0a0a10;
+
+.formLabel {
+    margin-top: 10px;
 }
+
+.formInput {
+    margin-top: 10px;
+}
+
+.formLabel input {
+    width: 100%;
+    height: 45px;
+    line-height: 30px;
+    padding: 0 5rem;
+    padding-left: 3rem;
+    border: 2px solid transparent;
+    border-radius: 10px;
+    outline: none;
+    background-color: #f8fafc;
+    color: #0d0c22;
+    transition: .5s ease;
+}
+
+.formLabel input::placeholder {
+    color: #94a3b8;
+}
+
+.formLabel input:focus, input:hover {
+    outline: none;
+    border-color: rgba(129, 140, 248);
+    background-color: #fff;
+    box-shadow: 0 0 0 5px rgb(129 140 248 / 30%);
+}
+
 .formLabel {
     text-align: left;
     font-weight: 500;
 }
+
 .error {
-    font-size: 10px;
+    font-size: 11px;
     color: red;
+    margin-top: 6px;
 }
+
 .submitFormButton {
-    border-radius: 8px;
-    height: 40px;
-    background: #0a0a0a;
-    padding: 8px 16px;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.64px;
-    color: #fff;
-    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    border: transparent;
-}
-.submitFormButton:hover {
-    background: #0a0a0a73;
-}
-.submitFormButton:focus {
-    background: #0a0a0a73;
+    position: relative;
+    margin: 0;
+    padding: 10px 20px;
     outline: none;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    text-transform: uppercase;
+    background-color: #fff;
+    border: 1px solid rgba(22, 76, 167, 0.6);
+    border-radius: 10px;
+    color: #1d89ff;
+    font-weight: 400;
+    font-family: inherit;
+    z-index: 0;
+    overflow: hidden;
+    transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+}
+
+.submitFormButton span {
+    color: #164ca7;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0.7px;
+}
+
+.submitFormButton:hover {
+    animation: rotate624 0.7s ease-in-out both;
+}
+
+.submitFormButton:hover span {
+    animation: storm1261 0.7s ease-in-out both;
+    animation-delay: 0.06s;
+}
+
+@keyframes rotate624 {
+    0% {
+    transform: rotate(0deg) translate3d(0, 0, 0);
+    }
+
+    25% {
+    transform: rotate(3deg) translate3d(0, 0, 0);
+    }
+
+    50% {
+    transform: rotate(-3deg) translate3d(0, 0, 0);
+    }
+
+    75% {
+    transform: rotate(1deg) translate3d(0, 0, 0);
+    }
+
+    100% {
+    transform: rotate(0deg) translate3d(0, 0, 0);
+    }
+}
+
+@keyframes storm1261 {
+    0% {
+    transform: translate3d(0, 0, 0) translateZ(0);
+    }
+
+    25% {
+    transform: translate3d(4px, 0, 0) translateZ(0);
+    }
+
+    50% {
+    transform: translate3d(-3px, 0, 0) translateZ(0);
+    }
+
+    75% {
+    transform: translate3d(2px, 0, 0) translateZ(0);
+    }
+
+    100% {
+    transform: translate3d(0, 0, 0) translateZ(0);
+    }
 }
