--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -7,5 +7,6 @@
   align-items: center;
   padding: 10px;
   width: 100vw;
-  border-bottom: 1.5px solid #e5e7eb;
+  border-bottom: 1.5px solid #d2d6ff;
+  background: linear-gradient(to bottom right, rgb(215, 247, 255), rgb(214, 213, 255));
 }
