--- a/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/src/components/RegistrationForm/RegistrationForm.module.css
@@ -10,7 +10,7 @@
     border-radius: 8px;
     margin: 0 auto;
     margin-top: 34px;
-    background-color: #efefef;
+    background-color: #f1ecec;
 }
 
 .formLabel input {
