--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background: linear-gradient(to bottom right, rgb(177, 241, 255), rgb(148, 143, 255));
 }
 
 h1 {
